--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -7,7 +7,7 @@
 
 appearance:
   theme_day: massively
-  theme_night: 
+  theme_night: massively
   font: lucida calligraphy
   font_size: L
   background: 
