--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -8,8 +8,8 @@
 appearance:
   mode: light
   color: blue
-  theme_day: massively
-  theme_night: 
+  theme_day: 
+  theme_night: dark
   font: lucida calligraphy
   font_size: L
   background: 
